@startuml
'https://plantuml.com/class-diagram

package Domain {
    class Pesquisa {
        -id: int
        -code: String
        -periodo: LocalDateTime
    }

    class Respondedor {
        -id : int
        -nome: String
        -email: String
        -idade: int
    }

    class Pergunta {
        -id: long
        -titulo: String
    }

    class Resposta {
        -id: int
        -titulo: String
    }

    Pesquisa "1" --* "1..*" Pergunta : tem
    Pesquisa "1" --> "0..*" Respondedor : tem
    Resposta "0..*" --> "1..*" Respondedor : tem
    Pergunta "1..*" --> "1" Resposta : tem
}

@enduml